HYDRAN-948: Replace MDViewer with Company integration